test/errors/err1.upl
include

fn main
	println("yo")
end
